--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,17 @@
     <!-- Here we include bootstrap. This will be made available to all of the generated HTML/JS that React generates-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
-<!--
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/fontAwesome.css">
-    <link rel="stylesheet" href="css/hero-slider.css">
-    <link rel="stylesheet" href="css/tooplate-style.css">
--->
-
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+    <link rel="stylesheet" href="stylesheets/hero-slider.css">
+    <link rel="stylesheet" href="stylesheets/tooplate-style.css">
+    <link rel="stylesheet" href="stylesheets/cardflip.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+
+   <!--  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 
 </head>
 
@@ -34,13 +36,12 @@
     <br>
     <br>
   
-    <footer>
+<footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="copyright-text">
-                        <p>Copyright &copy; 2017 Heavy Veggie 
-                        
+                        <p>Copyright &copy; 2017 NEOVEG 
                         </p>
                     </div>
                 </div>
@@ -48,19 +49,10 @@
                     <div class="social-icons">
                         <ul>
                             <li>
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                            <li>
                                 <a href="#"><i class="fa fa-rss"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
                             </li>
                         </ul>
                     </div>
