working calendar api route

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="stylesheets/bootstrap-theme.min.css">
     <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheets/hero-slider.css">
-    <link rel="stylesheet" href="stylesheets/tooplate-style.css">
+    <!-- <link rel="stylesheet" href="stylesheets/tooplate-style.css"> -->
     <link rel="stylesheet" href="stylesheets/cardflip.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
