--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="stylesheets/hero-slider.css">
-  <link rel="stylesheet" href="stylesheets/style.css">
+  
   <link rel="stylesheet" href="stylesheets/cardflip.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
-   <!--  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
-<!--    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
+  <link rel="stylesheet" href="stylesheets/style.css">
     
 
     <!--BOOTSTRAP JAVASCRIPT-->
@@ -120,11 +118,11 @@
 
 
     /************** Mixitup (Filter Projects) *********************/
-        $('.projects-holder').mixitup({
-            effects: ['fade','grayscale'],
-            easing: 'snap',
-            transitionSpeed: 400
-        });
+//        $('.projects-holder').mixitup({
+//            effects: ['fade','grayscale'],
+//            easing: 'snap',
+//            transitionSpeed: 400
+//        });
 
 });
 
