--- a/public/index.html
+++ b/public/index.html
@@ -108,13 +108,15 @@
 
 
         $(window).on("scroll", function() {
-            if($(window).scrollTop() > 40) {
+            if($(window).scrollTop() > 20) {
                 $(".header").addClass("active");
-            } else {
-                //remove the background property so it comes transparent again (defined in your css)
+                $("body").css("background", "white");
+           } else {
                $(".header").removeClass("active");
+               $("body").css("background", "url(\"../images/vegetables.png\") fixed center center / cover no-repeat white");
             }
         });
+
 
 
     /************** Mixitup (Filter Projects) *********************/
