--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <link rel="stylesheet" href="stylesheets/cardflip.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+
 
   <link rel="stylesheet" href="stylesheets/style.css">
     
@@ -108,21 +109,14 @@
 
 
         $(window).on("scroll", function() {
-            if($(window).scrollTop() > 100) {
+            if($(window).scrollTop() > 20) {
                 $(".header").addClass("active");
-            } else {
-                //remove the background property so it comes transparent again (defined in your css)
+                $("body").css("background", "white");
+           } else {
                $(".header").removeClass("active");
+               $("body").css("background", "url(\"../images/vegetables.png\") fixed center center / cover no-repeat white");
             }
         });
-
-
-    /************** Mixitup (Filter Projects) *********************/
-//        $('.projects-holder').mixitup({
-//            effects: ['fade','grayscale'],
-//            easing: 'snap',
-//            transitionSpeed: 400
-//        });
 
 });
 
