--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
 
   <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/pricing.css">
     
 
     <!--BOOTSTRAP JAVASCRIPT-->
