--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,8 @@
                 $("body").css("background", "white");
            } else {
                $(".header").removeClass("active");
-               $("body").css("background", "url(\"../images/vegetables.png\") fixed center center / cover no-repeat white");
+               $("body").css("background", "url(\"../images/vegetables.png\") fixed top center / cover no-repeat white ");
+               $("body").css("background-size", "100% auto");
             }
         });
 
