--- a/email/sample_update.html
+++ b/email/sample_update.html
@@ -33,7 +33,7 @@
                     <h2 class="mt-0">Your Tomatoes</h2>
                     <h3>Completed Milestone 2 of 3!</h3>
                     <h3>(May 14 to June 29)</h3>
-                        <p class="lead">You Tomato plant is really growing!</p>
+                        <p class="lead">Your Tomato plant is really growing!</p>
                         <p class="lead">It should be about time to harvest your Tomatoes</p>
                         <table class="table">
                             <thead>
